--- a/web-developer.html
+++ b/web-developer.html
@@ -38,15 +38,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/TalentGenGlobalUSA/743999698522823-web-design-developer-intern-virtual-great-reference-portfolio-building'>TalentGen Global, USA Web Design/Developer, Intern (virtual) GREAT reference portfolio building | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Houston, TX</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/ovrqbfwh'>Santander Consumer USA Careers - Web Development Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://www.cv-library.co.uk/job/211106559/JavaScript-Full-Stack-Web-Developer?s=100340&utm_source=dlvr.it&utm_medium=twitter'>JavaScript Full Stack Web Developer | CV-Library.co.uk | 211106559</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/senior-technology-architect-salesforce/46173?utm_content=104483032&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<h5><a href='https://artisantalent.com/jobs/chicago/senior-technology-architect-salesforce/46173?utm_content=104483032&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -98,7 +102,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
+<h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -106,7 +110,7 @@
 <p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proximity.applytojob.com/apply/s45lpoSq1J/Senior-React-Web-Developer-Developer'>Senior React Web Developer Developer - ProximityCR - Career Page</a></h5> 
+<h5><a href='http://proximity.applytojob.com/apply/s45lpoSq1J/Senior-React-Web-Developer-Developer'>Senior React Web Developer Developer - ProximityCR - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -149,7 +153,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to Junior Web Developer at MedThink in Cary, NC.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HazteOirorg/743999684921275-web-developer-with-experience-in-php-mysql-css-javascript'>HazteOir.org Web developer with experience in PHP, MySQL, CSS, JavaScript | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/HazteOirorg/743999684921275-web-developer-with-experience-in-php-mysql-css-javascript'>HazteOir.org Web developer with experience in PHP, MySQL, CSS, JavaScript | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madrid Madrid, Spain Madrid Madrid</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -177,7 +181,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698372664-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698372664-web-developer'>Devoteam Web developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Malm?Copenhagen</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -397,7 +401,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light">United States  Atlanta, Georgia  New York, New York</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/silver-peak/job/o3w1afwu'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/silver-peak/job/o3w1afwu'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -453,10 +457,6 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <h5><a href='https://artisantalent.com/jobs/chicago/product-architect/46186?utm_content=104050920&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698092466-web-developer-jr-'>Bosch Group Web Developer Jr. | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Mexico</span></p>
-<p>Posted on: 2019-10-24</p>
 <hr/>
 
 
