--- a/ui.html
+++ b/ui.html
@@ -40,6 +40,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ox1mafwO&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ntI0oMwQ'>ServiceNow Careers - Software Architect (Distinguished Software Engineer) ? UI</a></h5> 
+<p><span class="badge badge-light">San Diego, California  San Diego</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/McDonaldsCanada/743999698522791-caissier-cuisinier-nuit-dimanche-au-jeudi-prime-de-nuit'>McDonald's Restaurants Caissier/Cuisinier - Nuit (Dimanche au jeudi) PRIME DE NUIT | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Canada</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/CPPInvestmentBoard/743999698522300-senior-ui-ux-engineer-data-engineering-5-month-contract-'>CPP Investment Board Senior UI/UX Engineer, Data Engineering  (5-month Contract) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Toronto, Canada</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://www.greatinsurancejobs.com/job/6409337/ui-developer/?TrackID=97736'>UI Developer job with Travelers Insurance | 6409337</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
@@ -88,15 +100,15 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/pharmacy-technician-certified-5632'>Pharmacy Technician, Certified - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/pharmacy-technician-certified-5632'>Pharmacy Technician, Certified - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/supervisor-custodian-services-5638'>Supervisor, Custodian Services - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/supervisor-custodian-services-5638'>Supervisor, Custodian Services - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/5630/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/5630/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -156,7 +168,7 @@
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -170,7 +182,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4497422002'>Job Application for Head of Product Design (UX/UI), ShopStyle Collective at ShopStyle</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4497422002'>Job Application for Head of Product Design (UX/UI), ShopStyle Collective at ShopStyle</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -252,7 +264,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/467038-teamleiter-m-w-d-distribution-b2b-und-events'>Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN</a></h5> 
+<h5><a href='https://tui.join.com/jobs/467038-teamleiter-m-w-d-distribution-b2b-und-events'>Job @ TUI Austria Holding (Wien): Teamleiter (m/w/... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -260,7 +272,7 @@
 <p><span class="badge badge-light">Littleton, CO, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698423478-ui-ux'>ClientSolv Technologies UI/UX | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698423478-ui-ux'>ClientSolv Technologies UI/UX | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -288,7 +300,7 @@
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/ui-developer-c5BjXi-Ayr6AP8aKiznY58'>UI Developer #0671 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/radiantdigital/jobs/ui-developer-c5BjXi-Ayr6AP8aKiznY58'>UI Developer #0671 job at Radiant Digital in Temple Terrace, FL, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Temple Terrace, FLTemple Terrace, FL Tampa, FL</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -304,7 +316,7 @@
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/freelancer/e584761'>Stellenangebot: UX / UI Designer (m/w/d) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/freelancer/e584761'>Stellenangebot: UX / UI Designer (m/w/d) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -402,7 +414,7 @@
 <p><span class="badge badge-light">France  France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verifiedrecruit.com/job/recruiting-bank-tellers-for-a-leading-bank-nationwide/'>RECRUITING BANK TELLERS FOR A LEADING BANK NATIONWIDE? - Verified Recruit</a></h5> 
+<h5><a href='https://verifiedrecruit.com/job/recruiting-bank-tellers-for-a-leading-bank-nationwide/'>RECRUITING BANK TELLERS FOR A LEADING BANK NATIONWIDE? - Verified Recruit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -414,7 +426,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crosscast.be/job/ui-designer/?platform=hootsuite&utm_campaign=talent-ui-designer'>UI Designer | CrossCast - Freelance platform</a></h5> 
+<h5><a href='https://crosscast.be/job/ui-designer/?platform=hootsuite&utm_campaign=talent-ui-designer'>UI Designer | CrossCast - Freelance platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -443,24 +455,6 @@
 <h5><a href='https://uiowa.referrals.selectminds.com/jobs/5593/other-jobs-matching/location-only'>Job Search Results - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/accountant-accounts-payable-travel-5593'>Accountant, Accounts Payable & Travel - Jobs@UIOWA Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://www.applythis.net/job/?a=72195F7B7.0'>
-	
-    Apply for Senior Graphic/UI Designer -  Manchester City Centre, United Kingdom - Media, New Media and Creative - SS011 - Find a job, build a career
-
-</a></h5> 
-<p><span class="badge badge-light">Manchester Manchester Manchester</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dribbble.com/jobs/24890-Product-designer-UX-UI?source=twitter'>
-      Product designer (UX/UI) at Beeline - London, UK - Dribbble Design Jobs
-  </a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
